actually fixed gh pages

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,8 @@
 config.folder=${file.reference.timelineDP-config}
+file.reference.NetBeansProjects-timelineDP=.
 file.reference.timelineDP-config=config
 file.reference.timelineDP-public_html=public_html
 file.reference.timelineDP-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.timelineDP-public_html}
+site.root.folder=${file.reference.NetBeansProjects-timelineDP}
 test.folder=${file.reference.timelineDP-test}
