--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,12 @@
 config.folder=${file.reference.timelineDP-config}
+external.project.url=
 file.reference.NetBeansProjects-timelineDP=.
 file.reference.timelineDP-config=config
 file.reference.timelineDP-public_html=public_html
 file.reference.timelineDP-test=test
 files.encoding=UTF-8
+server=INTERNAL
 site.root.folder=${file.reference.NetBeansProjects-timelineDP}
+start.file=index.html
 test.folder=${file.reference.timelineDP-test}
+web.context.root=/timelineDP
